<resources>
    <string name="app_name">FinalTouch</string>
    <string name="gesture">gesture</string>
    <string name="take_picture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="take_pic">Take Pic</string>
    <string name="save_pic">SAVE PIC</string>
    <string name="library">Library</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="library_caps">LIBRARY</string>
    <string name="nightwhisper_filter">NightWhisper filter</string>
    <string name="startlit_filter_30">StartLit filter 30</string>
    <string name="awestruckvibe_filter">AweStruckVibe filter</string>
    <string name="bluemess_filter">BlueMess filter</string>
    <string name="vignette_filter">Vignette filter</string>
    <string name="reset_current_image">Reset Current Image</string>
</resources>
