<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/take_pic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:text="@string/take_picture"
        android:onClick="startTakePicIntent"
        app:layout_constraintBaseline_toBaselineOf="@+id/gallery_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="133dp"
        android:text="@string/library"
        android:onClick="startLibraryIntent"
        app:layout_constraintStart_toEndOf="@+id/take_pic_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/filter_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/apply_filter"
        android:onClick="startFilterIntent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_pic_button" />
</android.support.constraint.ConstraintLayout>