<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePicActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/back_to_main_menu_button_fromgallery"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="16dp"
        android:onClick="startFirstIntent"
        android:src="@drawable/arrow_back_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/takenimage"
        app:layout_constraintEnd_toStartOf="@+id/goToGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToGallery"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="368dp"
        android:onClick="startLibraryIntent"
        android:text="@string/library_caps"
        app:layout_constraintBottom_toTopOf="@+id/take_picture_button"
        app:layout_constraintEnd_toStartOf="@+id/goToApplyFilterIntent"
        app:layout_constraintStart_toEndOf="@+id/back_to_main_menu_button_fromgallery"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/goToApplyFilterIntent"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="startFilterIntent"
        android:text="@string/apply_filter"
        app:layout_constraintBottom_toTopOf="@+id/takenimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/takenimage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/savePicButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_to_main_menu_button_fromgallery" />

    <ImageButton
        android:id="@+id/take_picture_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/greenPicButton"
        android:onClick="takePicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savePicButton"
        app:layout_constraintTop_toBottomOf="@+id/goToApplyFilterIntent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add_a_photo_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/savePicButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="16dp"
        android:onClick="saveTakenPic"
        android:text="@string/save_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/take_picture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takenimage" />

</android.support.constraint.ConstraintLayout>